<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_title"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/activity_login_frame_title_background">

            <TextView
                android:id="@+id/text_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_login_title"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/activity_login_linear_login_background"
            android:elevation="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="45dp"
                android:text="@string/activity_signup_linear_title"
                android:textColor="@color/realchat_primary_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextGreyStyle"
                android:theme="@style/EditTextGreyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_signup_edit_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextGreyStyle"
                android:theme="@style/EditTextGreyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_login_edittext_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextGreyStyle"
                android:theme="@style/EditTextGreyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_login_edittext_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/activity_login_btn_login"
                android:text="@string/activity_signup_btn_signup"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>